--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,8 @@ spring:
           uri: lb://**
           predicates:
             - Path=/**
+  zipkin:
+    base-url: http://localhost:9411
 
 logging:
   level:
