--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,11 +11,6 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
-      routes:
-        - id: service-routes
-          uri: lb://**
-          predicates:
-            - Path=/**
 
 
 logging:
@@ -23,6 +18,8 @@ logging:
     root: DEBUG
     io.micrometer: DEBUG
     brave: DEBUG
+    org.springframework.web: DEBUG
+    org.springframework.cloud.gateway: DEBUG
 
 management:
   tracing:
